# pytorch-revgrad

./: .gitignore  .travis.yml  LICENSE  LICENSE.md  README.md  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.md  k8s-pod.yaml
src/pytorch_revgrad/: __init__.py  functional.py  module.py  version.py
tests/: test_layer.py
