[tool.poetry]
name = "pytorch-revgrad"
version = "0.0.1"
description = "Gradient reversal layer for pytorch."
authors = ["Jan Freyberg <jan.freyberg@gmail.com>"]
readme = 'README.md'

[tool.poetry.dependencies]
torch = "^1.0"

[tool.poetry.dev-dependencies]
sphinx = "^1.8"
sphinx-rtd-theme = "^0.4.3"
recommonmark = "^0.5.0"
m2r = "^0.2.1"
numpydoc = "^0.8.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
